<resources>
    <string name="app_name">androidHomeTask04</string>
    <string name="action_settings">Setting</string>
    <string name="action_my_item">My Items</string>
    <string name="todo">TODO</string>
    <string name="policies">Policies</string>
    <string name="brand">Brand</string>
    <string name="origin_category">Origin Category</string>
    <string name="product_category">Product Category</string>
    <string name="policy">Policy</string>
    <string name="current_policies">Current Policies</string>
    <string name="export_as_cvs">Export as CVS</string>
    <string name="ac">AC</string>
    <string name="pm">+/-</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="additon">+</string>
    <string name="_0">0</string>
    <string name="fl_point">.</string>
    <string name="equality">=</string>
    <string name="send_intent">Send Intent</string>
</resources>