<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linear"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_send_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/send_intent"
            android:backgroundTint="@color/tomato"
            android:textColor="@color/white"
            android:background="@drawable/style_red"
            android:textSize="20sp"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal|top"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:layout_gravity="end|bottom"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:maxLength="13"
            android:ellipsize="end"
            android:paddingStart="10dp"
            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="4"
            android:paddingVertical="8dp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/Button.Gray"
                android:layout_marginEnd="6dp"
                android:text="@string/ac"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus_plus"
                style="@style/Button.Gray"
                android:layout_marginHorizontal="6dp"
                android:text="@string/pm"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                style="@style/Button.Gray"
                android:layout_marginHorizontal="6dp"
                android:text="@string/percent" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_division"
                style="@style/Button.Orange"
                android:layout_marginStart="6dp"
                android:text="@string/divide"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="4"
            android:paddingVertical="8dp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Button.GrayDark"
                android:layout_marginEnd="6dp"
                android:text="@string/_7"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/Button.GrayDark"
                android:layout_marginHorizontal="6dp"
                android:text="@string/_8"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/Button.GrayDark"
                android:layout_marginHorizontal="6dp"
                android:text="@string/_9"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Button.Orange"
                android:layout_marginStart="6dp"
                android:text="@string/x"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="4"
            android:paddingVertical="8dp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Button.GrayDark"
                android:layout_marginEnd="6dp"
                android:text="@string/_4"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/Button.GrayDark"
                android:layout_marginHorizontal="6dp"
                android:text="@string/_5"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/Button.GrayDark"
                android:layout_marginHorizontal="6dp"
                android:text="@string/_6"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/Button.Orange"
                android:layout_marginStart="6dp"
                android:text="@string/subtraction"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="4"
            android:paddingVertical="8dp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Button.GrayDark"
                android:layout_marginEnd="6dp"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/Button.GrayDark"
                android:layout_marginHorizontal="6dp"
                android:text="@string/_2"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/Button.GrayDark"
                android:layout_marginHorizontal="6dp"
                android:text="@string/_3"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/Button.Orange"
                android:layout_marginStart="6dp"
                android:text="@string/additon"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="4"
            android:paddingVertical="8dp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/Button.GrayDark"
                android:layout_marginEnd="6dp"
                android:layout_weight="4"
                android:width="0dp"
                android:textAlignment="textStart"
                android:paddingStart="30dp"
                android:text="@string/_0"
                tools:ignore="RtlSymmetry"
                android:layout_width="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_floating_point"
                style="@style/Button.GrayDark"
                android:layout_width="74dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/fl_point"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                android:layout_width="74dp"
                android:onClick="functionClick"
                style="@style/Button.Orange"
                android:layout_marginStart="6dp"
                android:text="@string/equality"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>