<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    tools:context=".SecondActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkslategray"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/hamburger_button" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ok_hand"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_search" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/policies"
        android:textColor="@color/darkslategray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        android:background="@android:color/transparent">

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:background="@drawable/styles"
            android:drawableEnd="@drawable/arrow_right"
            android:text="@string/policy"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/darkslategray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/arrow_right"
            android:textAllCaps="false"
            android:layout_below="@id/btn"
            android:background="@drawable/styles"
            android:text="@string/product_category"
            android:textColor="@color/darkslategray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_below="@id/btn1"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/arrow_right"
            android:textAllCaps="false"
            android:background="@drawable/styles"
            android:text="@string/origin_category"
            android:textColor="@color/darkslategray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn2"
            android:layout_marginVertical="6dp"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/arrow_right"
            android:textAllCaps="false"
            android:background="@drawable/styles"
            android:text="@string/brand"
            android:textColor="@color/darkslategray"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text2activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_policies"
        android:textColor="@color/darkslategray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout1" />

    <Button
        android:id="@+id/btn4complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2activity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:background="@drawable/style_red"
        android:onClick="fatahh"
        android:text="@string/export_as_cvs"
        android:textColor="@color/white"
        android:textSize="20sp" />

</androidx.constraintlayout.widget.ConstraintLayout>